--- a/index.html
+++ b/index.html
@@ -70,3 +70,103 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web App with Dark Mode</title>
+    <style>
+        /* CSS Variables for easy switching */
+        :root {
+            --bg: #f8fafc;
+            --card-bg: #ffffff;
+            --text: #1e293b;
+            --primary: #2563eb;
+        }
+
+        /* Dark Mode variables */
+        [data-theme="dark"] {
+            --bg: #0f172a;
+            --card-bg: #1e293b;
+            --text: #f8fafc;
+            --primary: #60a5fa;
+        }
+
+        body { 
+            font-family: system-ui, sans-serif; 
+            background: var(--bg); 
+            color: var(--text);
+            display: grid;
+            place-content: center;
+            height: 100vh;
+            margin: 0;
+            transition: background 0.3s, color 0.3s;
+        }
+
+        .card {
+            background: var(--card-bg);
+            padding: 2.5rem;
+            border-radius: 1rem;
+            box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);
+            text-align: center;
+            width: 320px;
+        }
+
+        button {
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            font-weight: 600;
+            margin: 10px 0;
+        }
+
+        #themeToggle {
+            background: transparent;
+            border: 2px solid var(--primary);
+            color: var(--primary);
+            font-size: 0.8rem;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="card">
+        <button id="themeToggle">Switch to Dark Mode</button>
+        <hr style="opacity: 0.2; margin: 20px 0;">
+        <h2>Simple App</h2>
+        <div id="counter" style="font-size: 2rem; font-weight: bold;">0</div>
+        <button id="incrementBtn">Increase Count</button>
+    </div>
+
+    <script>
+        const themeToggle = document.getElementById('themeToggle');
+        const incrementBtn = document.getElementById('incrementBtn');
+        const counterDisplay = document.getElementById('counter');
+        let count = 0;
+
+        // Theme Toggle Logic
+        themeToggle.addEventListener('click', () => {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            if (currentTheme === 'dark') {
+                document.documentElement.removeAttribute('data-theme');
+                themeToggle.innerText = 'Switch to Dark Mode';
+            } else {
+                document.documentElement.setAttribute('data-theme', 'dark');
+                themeToggle.innerText = 'Switch to Light Mode';
+            }
+        });
+
+        // Counter Logic
+        incrementBtn.addEventListener('click', () => {
+            count++;
+            counterDisplay.innerText = count;
+        });
+    </script>
+
+</body>
+</html>
