--- a/index.html
+++ b/index.html
@@ -189,3 +189,51 @@
     <input type="text" id="ai-input" placeholder="Ask AI something..." style="margin-top: 0;">
     <button id="ask-btn">Ask AI</button>
 </div>
+
+<div class="card">
+    <h3>Miuxoo Smart AI</h3>
+    <div id="ai-chat-box" style="text-align: left; max-height: 200px; overflow-y: auto; background: var(--bg); padding: 10px; border-radius: 8px; margin-bottom: 10px; font-size: 0.9rem;">
+        <p><strong>Gemini:</strong> Hello! I am the Miuxoo AI. How can I help you today?</p>
+    </div>
+    <div style="display: flex; gap: 5px;">
+        <input type="text" id="user-input" placeholder="Type a message..." style="margin:0;">
+        <button id="send-ai-btn" style="width: 80px; margin:0;">Ask</button>
+    </div>
+</div>
+
+<script type="module">
+  import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
+
+  // 1. Setup API (REPLACE THE KEY BELOW)
+  const API_KEY = "AIzaSyCKsxEPHYk1HJLLI5UC1mriFQlL7eFPC2U";
+  const genAI = new GoogleGenerativeAI(API_KEY);
+  const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
+
+  const sendBtn = document.getElementById('send-ai-btn');
+  const chatBox = document.getElementById('ai-chat-box');
+  const userInput = document.getElementById('user-input');
+
+  sendBtn.addEventListener('click', async () => {
+    const text = userInput.value;
+    if (!text) return;
+
+    // Show User Message
+    chatBox.innerHTML += `<p><strong>You:</strong> ${text}</p>`;
+    userInput.value = "";
+    
+    // Show Loading
+    const loadingMsg = document.createElement('p');
+    loadingMsg.innerHTML = "<strong>Gemini:</strong> Thinking...";
+    chatBox.appendChild(loadingMsg);
+    chatBox.scrollTop = chatBox.scrollHeight;
+
+    try {
+      const result = await model.generateContent(text);
+      const response = await result.response;
+      loadingMsg.innerHTML = `<strong>Gemini:</strong> ${response.text()}`;
+    } catch (error) {
+      loadingMsg.innerHTML = "<strong>Gemini:</strong> Error connecting to AI. Check your API key.";
+    }
+    chatBox.scrollTop = chatBox.scrollHeight;
+  });
+</script>
