--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
     <p>ꜱʜᴏᴘ ᴏɴʟɪɴᴇ ᴀᴛ ᴍɪᴜxᴏ ɪɴᴅɪᴀ</p>
     <a href="https://miuxo.in" target="_blank" style="text-decoration: none;">
         <button style="background: var(--accent); border: 2px solid white;">
-            🌐 ᴡᴇʙꜱɪᴛᴇ
+            🌐 ᴍʏ ᴡᴇʙɪᴛᴇ
         </button>
     </a>
 </div>
 
 <div class="card">
-    <h3>ɪɴꜱᴛᴀɢʀᴀᴍ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ</h3>
-    <p>Check out my exclusive content and digital products.</p>
+    <h3>ꜱᴜᴘᴇʀᴘʀᴏꜰɪʟᴇ</h3>
+    <p>ɪɴꜱᴛᴀɢʀᴀᴍ ᴀᴜᴛᴏᴍᴀᴛɪᴏɴ</p>
     <a href="https://superprofile.bio/aimiuxo" target="_blank" style="text-decoration: none;">
         <button style="background: #000000; display: flex; align-items: center; justify-content: center; gap: 10px; margin: 0; border: 1px solid #333;">
             <span style="font-size: 1.2rem;">🚀</span>
-             ꜱᴜᴘᴇʀᴘʀᴏꜰɪʟᴇ
+             ꜱᴜᴘᴇʀᴘʀᴏꜰɪʟᴇ ᴡᴇʙꜱɪᴛᴇ
         </button>
     </a>
 </div>
