--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
         </button>
     </a>
 </div>
+
+<div class="card">
+    <h3>ᴠᴇᴇᴅ</h3>
+    <p>ᴀɪ ᴠɪᴅᴇᴏ ᴄʀᴇᴀᴛɪᴏɴ ꜰʀᴇᴇ</p>
+    <a href="https://www.veed.io/tools/ai-video" target="_blank" style="text-decoration: none;">
+        <button style="background: linear-gradient(90deg, #7c3aed 0%, #2563eb 100%); display: flex; align-items: center; justify-content: center; gap: 10px;">
+            <span>🎬</span>
+            ᴠᴇᴇᴅ ᴀɪ ᴡᴇʙꜱɪᴛᴇ
+        </button>
+    </a>
+</div>
     
 <div class="card">
     <h3>ᴊᴏɪɴ ᴛʜᴇ ᴄᴏᴍᴍᴜɴɪᴛʏ</h3>
