--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
     </div>
 
     <div class="card" style="background: var(--bg); border: 1px dashed #ccc;">
-        <h3>ᴊᴏɪɴ ᴛʜᴇ ᴄᴏᴍᴍᴜɴɪᴛʏ</h3>
-        <div style="display: flex; gap: 10px; margin-top: 15px;">
-            <a href="https://www.youtube.com/@aimiuxo" target="_blank" style="flex: 1; text-decoration: none;">
-                <button style="background: #FF0000; padding: 10px; font-size: 0.8rem;">ʏᴏᴜᴛᴜʙᴇ</button>
-            </a>
-            <a href="https://www.instagram.com/aimiuxo/" target="_blank" style="flex: 1; text-decoration: none;">
-                <button style="background: #E4405F; padding: 10px; font-size: 0.8rem;">ɪɴꜱᴛᴀɢʀᴀᴍ</button>
-            </a>
-        </div>
+    <h3>ᴊᴏɪɴ ᴛʜᴇ ᴄᴏᴍᴍᴜɴɪᴛʏ</h3>
+    
+    <div class="social-grid" style="margin-top: 15px;">
+        <a href="https://www.youtube.com/@aimiuxo" target="_blank" style="text-decoration: none;">
+            <button style="background: #FF0000; padding: 10px; font-size: 0.8rem; margin: 0;">ʏᴏᴜᴛᴜʙᴇ</button>
+        </a>
+        <a href="https://www.instagram.com/aimiuxo/" target="_blank" style="text-decoration: none;">
+            <button style="background: #E4405F; padding: 10px; font-size: 0.8rem; margin: 0;">ɪɴꜱᴛᴀɢʀᴀᴍ</button>
+        </a>
     </div>
-
 </div>
