--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miuxoo | Official</title>
+    <title>ᴇᴄᴏʀᴇxᴏ | ᴏꜰꜰɪᴄɪᴀʟ</title>
     
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2563eb">
@@ -96,7 +96,7 @@
         <p>ꜱʜᴏᴘ ᴏɴʟɪɴᴇ ᴀᴛ ᴍɪᴜxᴏ ɪɴᴅɪᴀ</p>
         <a href="https://miuxo.in" target="_blank" style="text-decoration: none;">
             <button style="background: var(--accent); color: white; box-shadow: 0 4px 0 #1e40af;">
-                🌐 ᴠɪꜱɪᴛ ᴍʏ ᴡᴇʙꜱɪᴛᴇ
+                🌐  ᴍʏ ᴡᴇʙꜱɪᴛᴇ
             </button>
         </a>
     </div>
