--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="container">
 
     <div class="card" style="border-top: 5px solid var(--accent);">
-        <h2 style="letter-spacing: 2px;">ᴍɪᴜxᴏ</h2>
+        <h2 style="letter-spacing: 2px;">ᴍɪᴜ𝗑ᴏ</h2>
         <p style="font-weight: bold; color: var(--accent);">ᴏꜰꜰɪᴄɪᴀʟ ʙʀᴀɴᴅ ʜᴜʙ</p>
         <p>ꜱʜᴏᴘ ᴏɴʟɪɴᴇ ᴀᴛ ᴍɪᴜxᴏ ɪɴᴅɪᴀ</p>
         <a href="https://miuxo.in" target="_blank" style="text-decoration: none;">
