--- a/index.html
+++ b/index.html
@@ -217,3 +217,9 @@
 
 </body>
 </html>
+
+<a href="mailto:your-shammas78099@gmail.com" style="text-decoration: none;">
+    <button style="background: #f1f5f9; color: #0f172a; margin-top: 10px; border: 1px solid #e2e8f0;">
+        ✉️ Direct Email Support
+    </button>
+</a>
